# AutoLabellerEvaluator

./: .gitignore  README.md  README.pt-br.md  config.ini.example  count_issues.py  data.ipynb  data_jabref.ipynb  data_openlibrary.ipynb  data_prestodb.ipynb  data_scikitlearn.ipynb  deleteword2vec.py  errors.txt  filters.py  fixData.py  generateGPTCode.py  generateOllamaCode.py  getProjects.py  getSolvedIssueData.py  get_total.py  get_updated.py  github_diff.py  gptCode.py  graphql.py  loadBackup.sh  main.py  makeBackup.sh  markGFI.py  mudancas.txt  projetos.csv  pyproject.toml  qp12-outro.py  qp12.py  qp3.py  query.qml  requirements.txt  resultados.out.txt  resultados.py  resultados.txt  resultados_codebleu.py  tabela.ipynb  (+3 more)
backup/evaluator/: Engenharia-de-Software-1%2FBackend.metadata.json  Engenharia-de-Software-1%2FBackend_results.bson  Engenharia-de-Software-1%2FBackend_results.metadata.json  apple%2Fswift.bson  apple%2Fswift.metadata.json  apple%2Fswift_results.bson  apple%2Fswift_results.metadata.json  facebook%2Fhhvm.bson  facebook%2Fhhvm.metadata.json  facebook%2Freact-native.bson  facebook%2Freact-native.metadata.json  facebook%2Freact-native_results.bson  facebook%2Freact-native_results.metadata.json  facebook%2Freact.bson  facebook%2Freact.metadata.json  facebook%2Freact_results.bson  facebook%2Freact_results.metadata.json  internetarchive%2Fopenlibrary.bson  jabref%2Fjabref.bson  (+21 more)
codebleu/: 8817.patch  8838.patch  gpt.java  teste.py
compareAlgorithms/: cache.py  exemplos.py  sbert.py  tfidf.py  word2vec.py  yake.py
precision/: average_precision.py
(+6 files in other folders)
